# aa-survey

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  package-lock.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: automated-checks.yml
aa_survey/: __init__.py  admin.py  apps.py  auth_hooks.py  constants.py  managers.py  models.py  urls.py  views.py
aa_survey/helper/: __init__.py  buttons.py
aa_survey/migrations/: 0001_initial.py  0002_survey_surveychoice_surveyform_surveyquestion_surveyresponse.py  0003_auto_20210827_0822.py  0003_auto_20210828_1136.py  0004_alter_surveyform_name.py  0004_auto_20210828_1433.py  0005_alter_surveyquestion_help_text.py  0005_surveyquestion_mandatory.py  0006_alter_surveyquestion_help_text_and_more.py  0007_rename_surveyquestion_question.py  0008_rename_surveychoice_choice.py  0009_rename_surveyform_form.py  0010_rename_surveyresponse_response.py
aa_survey/static/aa_survey/css/: aa-bootstrap-fix.css  aa-bootstrap-fix.min.css  aa-survey.css  aa-survey.min.css  aa-survey.min.css.map
aa_survey/templates/aa_survey/: base.html
aa_survey/templates/aa_survey/partials/: menu.html
aa_survey/templates/aa_survey/view/: dashboard.html  management.html  survey.html
aa_survey/templatetags/: aa_survey_versioned_static.py
aa_survey/tests/: __init__.py  test_views.py  utils.py
aa_survey/views/: management.py  survey.py
testauth/: __init__.py  local.py  settings.py  settings_aa3x.py  settings_django32.py
(+10 files in other folders)
