[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-survey"
version = "0.0.1-alpha.1"
description = "Manage surveys in Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "survey",
]
license = { file = "LICENSE" }
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=2.14",
    "allianceauth-app-utils>=1.12",
]
optional-dependencies.tests-allianceauth-stable = [
    "coverage",
    "django-webtest",
    "faker",
]
urls.Changelog = "https://github.com/ppfeufer/aa-survey/blob/master/CHANGELOG.md"
urls."Issue / Bug Reports" = "https://github.com/ppfeufer/aa-survey/issues"

[tool.hatch.build]
include = [
    "/aa_survey",
]
